Title Menu Person/User/Role/Group Debug Remove User Registration, moved to Person Setting Debug Student creation now adds user if avaiable.
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/FormBundle/Resources/config/services.yml
+++ b/src/Busybee/FormBundle/Resources/config/services.yml
@@ -62,3 +62,9 @@ services:
             - '@setting.manager'
         tags:
             - { name: form.type }
+    validator.unique.or.blank:
+        class: Busybee\FormBundle\Validator\Constraints\UniqueOrBlankValidator
+        arguments:
+            entityManager: '@doctrine.orm.entity_manager'
+        tags:
+            - { name: validator.constraint_validator, alias: unique_or_blank_validator }
