--- a/src/Busybee/PersonBundle/Resources/config/doctrine/Person.orm.yml
+++ b/src/Busybee/PersonBundle/Resources/config/doctrine/Person.orm.yml
@@ -13,6 +13,10 @@ Busybee\PersonBundle\Entity\Person:
             type: string
             length: '10'
             unique: true
+        importIdentifier:
+            type: string
+            length: '32'
+            nullable: true
         title:
             type: string
             length: '5'
