--- a/src/Busybee/InstituteBundle/Resources/config/routing.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/routing.yml
@@ -6,7 +6,7 @@ calendar_years:
     defaults: { _controller: BusybeeInstituteBundle:Calendar:years }
 year_calendar:
     path:     /year/{id}/calendar/
-    defaults: { _controller: BusybeeInstituteBundle:Calendar:calendar }
+    defaults: { _controller: BusybeeInstituteBundle:Calendar:calendar, id: 'current' }
 year_edit:
     path:     /year/{id}/edit/
     defaults: { _controller: BusybeeInstituteBundle:Calendar:editYear }
@@ -23,7 +23,7 @@ specialday_delete:
     path:     /special_day/{id}/{year}/delete/
     defaults: { _controller: BusybeeInstituteBundle:Calendar:deleteSpecialDay }
 year_calendar_change:
-    path:     /year/calendar/
+    path:     /year/change/
     defaults: { _controller: BusybeeInstituteBundle:Calendar:calendarChange }
 specialday_copy:
     path:     /special_day/{day}/{id}/copy/
