--- a/src/Busybee/SecurityBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/Busybee/SecurityBundle/Resources/config/doctrine/User.orm.yml
@@ -2,7 +2,7 @@
 Busybee\SecurityBundle\Entity\User:
     type: entity
     table: secure_users
-    repositoryClass: Busybee\SecurityBundle\Entity\UserRepository
+    repositoryClass: Busybee\SecurityBundle\Repository\UserRepository
     constraints:
         - Symfony\Bridge\Doctrine\Validator\Constraints\UniqueEntity: 
             fields: [username]
@@ -78,6 +78,9 @@ Busybee\SecurityBundle\Entity\User:
             column: credentials_expire_at
             type: datetime
             nullable: true
+        groups:
+            type: array
+            nullable: true
         lastModified:
             type: datetime
             nullable: true
@@ -98,17 +101,6 @@ Busybee\SecurityBundle\Entity\User:
                     referencedColumnName: id
                     nullable: true
     manyToMany:
-        groups:
-            targetEntity: Busybee\SecurityBundle\Entity\Group
-            nullable: true
-            joinTable:
-                name: secure_users_to_groups
-                joinColumns:
-                    user_id:
-                        referencedColumnName: id
-                inverseJoinColumns:
-                    group_id:
-                        referencedColumnName: id
         directroles:
             targetEntity: Busybee\SecurityBundle\Entity\Role
             nullable: true 
