Update / Install changes Setting Changes Script Changes
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/SystemBundle/Resources/config/updates/Setting_0_00_00.yml
+++ b/src/Busybee/SystemBundle/Resources/config/updates/Setting_0_00_00.yml
@@ -1,12 +1,12 @@
 Version.System:
-	type: 'string'
-	value: '0.0.00'
-	displayName: 'System Version'
-	description(: 'The version of Busybee currently configured on your system.'
+    type: 'string'
+    value: '0.0.00'
+    displayName: 'System Version'
+    description: 'The version of Busybee currently configured on your system.'
     role: 'ROLE_SYSTEM_ADMIN'
 Version.Database:
-	type: 'string'
-	value: '0.0.00'
-	displayName: 'Database Version'
-	description: 'The version of Busybee Database currently configured on your system.'
+    type: 'string'
+    value: '0.0.00'
+    displayName: 'Database Version'
+    description: 'The version of Busybee Database currently configured on your system.'
     role: 'ROLE_SYSTEM_ADMIN'
