--- a/src/Busybee/SystemBundle/Resources/config/updates/Setting_0_00_02.yml
+++ b/src/Busybee/SystemBundle/Resources/config/updates/Setting_0_00_02.yml
@@ -162,7 +162,6 @@ Org.Logo.Transparent:
     validator: 'validator.logo'
 Background.Image:
     type: 'image'
-        $entity->setName: 'Background.Image'
     displayName: 'Background Image'
     description: 'Change the background displayed for the site.  The image needs to be a minimum of 1200px width.  You can load an image of 1M size, but the smaller the size the better.'
     role: 'ROLE_ADMIN'
@@ -245,7 +244,7 @@ Residency.List:
     description: 'List of Residency Status.  Usually defined by the government.'
     role: 'ROLE_ADMIN'
 Settings.Default.Overwrite:
-    type: 'string'
+    type: 'file'
     displayName: 'Setting File Overwrite'
     description: 'A file name that allows the update process to change the default settings to match the users pre-set details.'
     role: 'ROLE_SYSTEM_ADMIN'
