Modified Setting Choice Idle Time Out implemented.
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/FormBundle/Resources/config/services.yml
+++ b/src/Busybee/FormBundle/Resources/config/services.yml
@@ -57,7 +57,7 @@ services:
         tags:
             - { name: form.type }
     form.type.setting:
-        class: Busybee\FormBundle\Type\SettingChoiceType
+        class: Busybee\FormBundle\Type\SettingType
         arguments:
             - '@setting.manager'
         tags:
