House addition. to Family, Staff and Students.
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/FamilyBundle/Resources/config/doctrine/CareGiver.orm.yml
+++ b/src/Busybee/FamilyBundle/Resources/config/doctrine/CareGiver.orm.yml
@@ -3,7 +3,7 @@ Busybee\FamilyBundle\Entity\CareGiver:
     table: caregiver
     repositoryClass: Busybee\FamilyBundle\Repository\CareGiverRepository
     uniqueConstraints:
-        firstFamilyPerson:
+        familyPerson:
             columns:
                 - family
                 - person
