--- a/src/Busybee/FamilyBundle/Resources/config/doctrine/Family.orm.yml
+++ b/src/Busybee/FamilyBundle/Resources/config/doctrine/Family.orm.yml
@@ -20,6 +20,10 @@ Busybee\FamilyBundle\Entity\Family:
             type: string
             length: 16
             nullable: true
+        house:
+             type: string
+             length: 32
+             nullable: true
         lastModified:
             type: datetime
         createdOn:
