--- a/src/Busybee/StaffBundle/Resources/config/validation/Staff.yml
+++ b/src/Busybee/StaffBundle/Resources/config/validation/Staff.yml
@@ -8,3 +8,8 @@ Busybee\StaffBundle\Entity\Staff:
             - NotBlank: ~
         jobTitle:
             - NotBlank: ~
+        house:
+            - Busybee\FormBundle\Validator\SettingChoice:
+                name: 'house.list'
+        person:
+            - NotBlank: ~
