--- a/src/Busybee/StudentBundle/Resources/config/doctrine/Student.orm.yml
+++ b/src/Busybee/StudentBundle/Resources/config/doctrine/Student.orm.yml
@@ -82,6 +82,10 @@ Busybee\StudentBundle\Entity\Student:
         visaExpiryDate:
             type: datetime
             nullable: true
+        house:
+            type: string
+            length: 32
+            nullable: true
         lastModified:
             type: datetime
         createdOn:
