Student Year Groups moved to the Year Definition
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/InstituteBundle/Resources/config/calendar/parameters.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/calendar/parameters.yml
@@ -13,3 +13,7 @@ parameters:
             label: calendar.tab.specialDays
             include: 'BusybeeInstituteBundle:Calendar:specialDays.html.twig'    
             message: specialDayMessage
+        studentYears:
+            label: calendar.tab.studentYears
+            include: 'BusybeeInstituteBundle:Calendar:studentYears.html.twig'
+            message: studentYearMessage
