--- a/src/Busybee/InstituteBundle/Resources/config/validation/Year.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/validation/Year.yml
@@ -9,3 +9,5 @@ Busybee\InstituteBundle\Entity\Year:
             - Valid: ~
         specialDays:
             - Valid: ~
+        studentYears:
+            - Valid: ~
