Add Enrolment Bundle, Move Home Room to Enrolment
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -34,6 +34,10 @@ busybee_family:
     resource: "@BusybeeFamilyBundle/Resources/config/routing.yml"
     prefix:   /family/
 
+busybee_enrolment:
+    resource: "@BusybeeEnrolmentBundle/Resources/config/routing.yml"
+    prefix:   /enrol/
+
 
 busybee_plugin:
     resource: .
