--- a/src/Busybee/CurriculumBundle/Resources/config/validation/Course.yml
+++ b/src/Busybee/CurriculumBundle/Resources/config/validation/Course.yml
@@ -1,13 +1,8 @@
 Busybee\CurriculumBundle\Entity\Course:
-    constraints:
-        - Symfony\Bridge\Doctrine\Validator\Constraints\UniqueEntity:
-            fields: [name, studentYear]
-            errorPath: name
-            message: curriculum.unique.name.studentYear
     properties:
         name:
             - NotBlank: ~
         version:
             - NotBlank: ~
-        studentYear:
+        targetYear:
             - NotBlank: ~
