--- a/src/Busybee/SystemBundle/Resources/Defaults/Default.yml
+++ b/src/Busybee/SystemBundle/Resources/Defaults/Default.yml
@@ -1401,4 +1401,5 @@ settings:
         Citizen: Citizen
         Temporary: Temporary
         Permanent: Permanent
-        Visitor: Visitor    
+        Visitor: Visitor
+    Student.
