--- a/src/Busybee/CurriculumBundle/Resources/config/doctrine/Course.orm.yml
+++ b/src/Busybee/CurriculumBundle/Resources/config/doctrine/Course.orm.yml
@@ -2,9 +2,6 @@ Busybee\CurriculumBundle\Entity\Course:
     type: entity
     table: course
     repositoryClass: Busybee\CurriculumBundle\Repository\CourseRepository
-    uniqueConstraints:
-        name_version:
-            columns: [ name, studentYear ]
     id:
         id:
             type: integer
@@ -14,6 +11,7 @@ Busybee\CurriculumBundle\Entity\Course:
         name:
             type: string
             length: '100'
+            unique: true
         version:
             type: string
             length: '10'
@@ -22,19 +20,15 @@ Busybee\CurriculumBundle\Entity\Course:
             type: datetime
         createdOn:
             type: datetime
+        targetYear:
+            type: string
+            length: '255'
     manyToOne:
-        studentYear:
-            targetEntity: Busybee\InstituteBundle\Entity\StudentYear
-            orderBy: [name]
-            joinColumns:
-                studentYear:
-                    referencedColumnName: id
         createdBy:
             targetEntity: Busybee\SecurityBundle\Entity\User
             joinColumns:
                 createdBy:
                     referencedColumnName: id
-                    
         modifiedBy:
             targetEntity: Busybee\SecurityBundle\Entity\User
             joinColumns:
