--- a/src/Busybee/EnrolmentBundle/Resources/config/services.yml
+++ b/src/Busybee/EnrolmentBundle/Resources/config/services.yml
@@ -1,59 +1,2 @@
-parameters:
-    HomeRoomPagination:
-        alias: h
-        sortBy:
-            Name:
-                h.name: ASC
-                y.name: ASC
-            Short Name:
-                h.nameShort: ASC
-                y.name: ASC
-            Room:
-                r.name: ASC
-                y.name: ASC
-                h.name: ASC
-            Year:
-                y.name: ASC
-                h.name: ASC
-        join:
-            h.schoolYear:
-                alias: y
-                type: leftJoin
-            h.campusResource:
-                alias: r
-                type: leftJoin
-        limit: '25'
-        searchList:
-            - h.name
-            - h.nameShort
-            - y.name
-            - r.name
-        select:
-            - h.name
-            - h.id
-            - h.nameShort
-            - y.name as year
-            - r.name as room
-
+parameters: ~
 services:
-    home.room.repository:
-        class: Busybee\EnrolmentBundle\Repository\HomeRoomRepository
-        factory:
-            - "@doctrine"
-            - 'getRepository'
-        arguments:
-            - "BusybeeEnrolmentBundle:HomeRoom"
-    home.room.pagination:
-        class: Busybee\EnrolmentBundle\Model\HomeRoomPagination
-        arguments:
-            - '%HomeRoomPagination%'
-            - '@home.room.repository'
-            - '@my_service_container'
-    home.room.form.type:
-        class: Busybee\EnrolmentBundle\Form\HomeRoomType
-        arguments:
-            - '@doctrine.orm.entity_manager'
-            - '@setting.manager'
-        tags:
-            - { name: form.type }
-
