--- a/src/Busybee/InstituteBundle/Resources/config/services.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/services.yml
@@ -4,28 +4,7 @@ parameters:
         calendar.status.past: past
         calendar.status.current: current
         calendar.status.future: future
-    studentYearPagination:
-        alias: s
-        sortBy:
-            Sequence:
-                s.sequence: ASC
-            Name:
-                s.name: ASC
-            Short Name:
-                s.nameShort: ASC
-        limit: '25'
-        searchList:
-            - s.name
-            - s.nameShort
-    campusResourcePagination:
-        alias: r
-        sortBy:
-            Name:
-                r.name: ASC
-        limit: '25'
-        searchList:
-            - r.name
-            - r.comment
+    campusResourcePagination: []
 services:
     campus.repository:
         class: Busybee\InstituteBundle\Repository\CampusRepository
@@ -122,21 +101,8 @@ services:
             - '@my_service_container'
         tags:
             - { name: twig.extension }
-    studentYear.pagination:
-        class: Busybee\InstituteBundle\Model\StudentYearPagination
-        arguments:
-            - '%studentYearPagination%'
-            - '@studentYear.repository'
-            - '@my_service_container'
-    studentYear.repository:
-        class: Busybee\InstituteBundle\Repository\StudentYearRepository
-        factory:
-            - "@doctrine"
-            - 'getRepository'
-        arguments:
-            - "BusybeeInstituteBundle:StudentYear"
     campusResource.pagination:
-        class: Busybee\InstituteBundle\Model\StudentYearPagination
+        class: Busybee\InstituteBundle\Model\CampusResourcePagination
         arguments:
             - '%campusResourcePagination%'
             - '@campusResource.repository'
@@ -159,12 +125,6 @@ services:
         class: Busybee\InstituteBundle\Events\CampusSubscriber
         arguments:
             - '%country%'
-    form.student.years.type:
-        class: Busybee\InstituteBundle\Form\StudentYearType
-        arguments:
-            - '@year.manager'
-        tags:
-            - { name: form.type }
     year.manager:
         class: Busybee\InstituteBundle\Model\YearManager
         arguments:
