--- a/src/Busybee/CurriculumBundle/Resources/config/doctrine/Course.orm.yml
+++ b/src/Busybee/CurriculumBundle/Resources/config/doctrine/Course.orm.yml
@@ -2,6 +2,11 @@ Busybee\CurriculumBundle\Entity\Course:
     type: entity
     table: course
     repositoryClass: Busybee\CurriculumBundle\Repository\CourseRepository
+    uniqueConstraints:
+        name_version:
+            columns: [ name, version ]
+        code_version:
+            columns: [ code, version ]
     id:
         id:
             type: integer
@@ -11,18 +16,19 @@ Busybee\CurriculumBundle\Entity\Course:
         name:
             type: string
             length: '100'
-            unique: true
+        code:
+            type: string
+            length: '3'
         version:
             type: string
             length: '10'
-            nullable: true
+        targetYear:
+            type: string
+            length: '255'
         lastModified:
             type: datetime
         createdOn:
             type: datetime
-        targetYear:
-            type: string
-            length: '255'
     manyToOne:
         createdBy:
             targetEntity: Busybee\SecurityBundle\Entity\User
