--- a/src/Busybee/CurriculumBundle/Resources/config/validation/Course.yml
+++ b/src/Busybee/CurriculumBundle/Resources/config/validation/Course.yml
@@ -1,8 +1,19 @@
 Busybee\CurriculumBundle\Entity\Course:
+    constraints:
+        - Symfony\Bridge\Doctrine\Validator\Constraints\UniqueEntity:
+            fields: [name, version]
+            errorPath: name
+            message: course.unique.name
+        - Symfony\Bridge\Doctrine\Validator\Constraints\UniqueEntity:
+            fields: [code, version]
+            errorPath: code
+            message: course.unique.code
     properties:
         name:
             - NotBlank: ~
         version:
             - NotBlank: ~
-        targetYear:
+        code:
             - NotBlank: ~
+            - Length:
+                max: 3
